--- a/index.html
+++ b/index.html
@@ -153,23 +153,23 @@
 
                 <div class="work__container bd-grid">
                     <a href="https://github.com/aryan12072002/image-compressor.git" class="work__img" style="text-decoration: none;">
-                        <img src="assets/img/work1.jpg" alt="">
+                        <img src="assets/img/work1.gif" alt="">
                         <h6 style="text-align: center; color: red; text-decoration: none;">Image Compressor</h6>
                     </a>
                     <a href="https://github.com/aryan12072002/Weather-forcasting.git" class="work__img" style="text-decoration: none;">
-                        <img src="assets/img/work3.jpg" alt="">
+                        <img src="assets/img/work3.gif" alt="">
                         <h6 style="text-align: center; color: red; text-decoration: none;">Weather-forcasting</h6>
                     </a> 
                     <a href="https://github.com/aryan12072002/DRF-Client-Project-Management.git" class="work__img" style="text-decoration: none;">
-                        <img src="assets/img/work4.jpg" alt="">
+                        <img src="assets/img/work4.gif" alt="">
                         <h6 style="text-align: center; color: red; text-decoration: none;">DRF-Client-Project-Management</h6>
                     </a>
                     <a href="https://github.com/aryan12072002/Social-Book.git" class="work__img" style="text-decoration: none;">
-                        <img src="assets/img/work5.jpg" alt="">
+                        <img src="assets/img/work5.gif" alt="">
                         <h6 style="text-align: center; color: red; text-decoration: none;">Social-Book</h6>
                     </a>
                     <a href="https://github.com/aryan12072002/Multi-Vendor-Managment-Food-Ordering-System.git" class="work__img" style="text-decoration: none;">
-                        <img src="assets/img/work6.jpg" alt="">
+                        <img src="assets/img/work6.gif" alt="">
                         <h6 style="text-align: center; color: red; text-decoration: none;">Food Ordering System</h6>
                     </a>
                 </div>
