--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                         <img src="assets/img/work4.gif" alt="">
                         <h6 class="work__text" style="text-align: center; color: red; text-decoration: none;">DRF-Client-Project-Management</h6>
                     </a>
-                    <a href="https://github.com/aryan12072002/django-social-media-website/tree/main" class="work__img" style="text-decoration: none;">
+                    <a href="https://github.com/aryan12072002/django-social-media-website.git" class="work__img" style="text-decoration: none;">
                         <img src="assets/img/work5.gif" alt="">
                         <h6 class="work__text" style="text-align: center; color: red; text-decoration: none;">Social-Book</h6>
                     </a>
