--- a/index.html
+++ b/index.html
@@ -172,6 +172,10 @@
                         <img src="assets/img/work6.gif" alt="">
                         <h6 class="work__text" style="text-align: center; color: red; text-decoration: none;">Food Ordering System</h6>
                     </a>
+                    <a href="https://github.com/aryan12072002/HousePricePrediction.git" class="work__img" style="text-decoration: none;">
+                        <img src="assets/img/work7.gif" alt="">
+                        <h6 class="work__text" style="text-align: center; color: red; text-decoration: none;">House Price Prediction</h6>
+                    </a>
                 </div>
             </section>
         </main>
